--- a/app/globals.css
+++ b/app/globals.css
@@ -3,18 +3,24 @@ body {
     width: 100vw;
     margin: 14px 0px 0px 0px;
     padding: 0;
-    overflow-x: hidden; 
+
 }
+main {
+    width: 100vw;
+}
+
 .nav-bar {
-    position: sticky; /*TODO why doesnt work?*/
+    background-color: white;
+    position: fixed;
+    top: 0;
     display: flex;
     align-items: center;
     width: 100vw;
-    height: 1rem;
+    height: 3rem;
     flex-direction:row;
     padding: 0px 16px 0px 24px;
 }
 .nav-bar-icon {
-    height: 200%;
+    height: 70%;
     width: auto;
 }
