before try grid

--- a/components/StartBuildingToday/StartBuildingToday.module.css
+++ b/components/StartBuildingToday/StartBuildingToday.module.css
@@ -12,14 +12,24 @@
     flex-direction: row;
 }
 .card {
-    width:auto;
-    margin: 0px 15px 0px 15px;
+    width:calc(50%-30px);
+    margin: 0px 15px 15px 15px;
     display: flex;
-    
-    
     align-items: center;
-    border:solid #F1F3F4;
+    border:1px solid #F1F3F4;
     border-radius: 10px;
-    padding: 15px 15px 15px 15px;
+    padding: 15px;
 }
 
+@media screen and (min-width:600px) {
+    .container {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        
+    }
+    .card {
+        flex: 1 1 45%;
+    }
+    
+}
