--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,8 @@
 body {
     size: 14px;
-    width: 100vw;
-    margin: 14px 0px 0px 0px;
+    max-width: 100%;
     padding: 0;
+    overflow-x: hidden;
 
 }
 main {
