--- a/components/ButtonSquared/ButtonSquared.module.css
+++ b/components/ButtonSquared/ButtonSquared.module.css
@@ -4,6 +4,9 @@
         padding: 5px 20px 5px 20px;
         color:white;
         border: None;
+        height: 36px;
+        display: block;
+        margin: auto;
         margin-top: 30px;
 }
 .button:hover {
