--- a/components/TechCard/TechCard.module.css
+++ b/components/TechCard/TechCard.module.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border:solid #F1F3F4;
+    outline:1.5px solid #dadce0;
     border-radius: 10px;
-    padding: 15px 15px 15px 15px;
+    padding: 15px;
 }
 .h2 {
     font-size: 16px;
