--- a/components/WhatAreYou/WhatAreYou.module.css
+++ b/components/WhatAreYou/WhatAreYou.module.css
@@ -3,9 +3,16 @@
     text-align: center;
     
 }
+.h2 {
+    font-size: 24px;
+    text-align: center;
+    font-weight: normal;
+    margin: 0px 15px 16px 15px;
+    
+}
 .section_build_today {
     padding: 0 24px 0 24px;
-    max-width: 100vw;
+    max-width:100vw;
 }
 .container {
     display: grid;
