--- a/components/Language/Language.module.css
+++ b/components/Language/Language.module.css
@@ -7,6 +7,8 @@
     border-radius: 5px;
     padding: 5px;
     max-width: 90px;
+    max-height: 26px;
+    min-height: 26px;
   }
   
   .earth-icon {
