--- a/components/Other/Other.module.css
+++ b/components/Other/Other.module.css
@@ -1,6 +1,6 @@
 .h1 {
-    font-size: 48px;
-    text-align: center;
+    font-size: 32px;
+    font-weight: normal;
     
 }
 .h2 {
@@ -11,23 +11,27 @@
     
 }
 .section_build_today {
-    padding: 0 24px 0 24px;
-    max-width:100vw;
+    margin-top: 40px;
+    padding: 40px 24px 24px 24px;
+    max-width: 100vw;
+    background-image: url("/img/dgc-learn-community-event-background.png");
+    background-size: contain;
 }
 .container {
     display: grid;
     grid-template-columns: 1fr;
-    gap: 30px;
+    gap : 30px;
 }
 
 @media screen and (min-width:600px) {
     .container {
+        
         grid-template-columns: repeat(2, 1fr); /* 2 columns on smaller screens */
     }
 }
 
 @media screen and (min-width:850px) {
     .container {
-        grid-template-columns: repeat(4, 1fr); /* 2 columns on smaller screens */
+        grid-template-columns: repeat(3, 1fr); /* 2 columns on smaller screens */
     }
 }
