--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@ body {
     size: 14px;
     max-width: 100%;
     padding: 0;
-    overflow-x: hidden;
+    /*overflow-x: hidden; */
 
 }
 main {
@@ -20,6 +20,7 @@ main {
     height: 3rem;
     flex-direction:row;
     padding: 0px 16px 0px 24px;
+    box-shadow: 0 1px 2px 0 rgba(60,64,67,.3),0 2px 6px 2px rgba(60,64,67,.15);
 }
 .nav-bar-icon {
     height: 70%;
